$Id: ChangeLog,v 1.2 2007-10-19 22:33:54 karl Exp $

2007-10-19 karl
    * Changes to tcllauncher.tcl make it actually do what it's supposed
      to do.