@@ -1,4 +1,12 @@
-$Id: ChangeLog,v 1.2 2007-10-19 22:33:54 karl Exp $
+$Id: ChangeLog,v 1.3 2007-11-24 06:30:10 karl Exp $
+
+2007-11-24 karl
+    * When allocating memory to fiddle command line arguments before
+      invoking Tcl_Main, use malloc instead of ckalloc because whatever
+      ckalloc needs hasn't necessarily been initialized yet.
+
+    * Using $(COMPILE) instead of $(CC) for compiling the main routine
+      makes it work on FreeBSD as well as the Mac.
 
 2007-10-19 karl
     * Changes to tcllauncher.tcl make it actually do what it's supposed
